--- a/ANGULAR/css/Events.css
+++ b/ANGULAR/css/Events.css
@@ -274,7 +274,7 @@
   /* Events Cards */
   #event-cards {
       display: flex;
-      justify-content: space-between;
+      justify-content:flex-start;
       gap: 20px;
   }
 
