--- a/ANGULAR/css/Register_Step_2.css
+++ b/ANGULAR/css/Register_Step_2.css
@@ -14,7 +14,7 @@ body {
     color: #999;
     margin-bottom: 10px;
     text-align: center;
-    margin-top: 5em;
+    margin-top: 1em;
 }
 
 h1 {
@@ -33,29 +33,30 @@ p {
 .wrapper {
     display: flex;
     justify-content: center;
-    align-items: stretch;
+    align-items: stretch; /* Equal height for all cards */
     flex-wrap: wrap;
     color: rgba(0, 0, 0, 0.7);
     margin-bottom: 4em;
 }
 
 .wrapper .card {
+    flex: 1; /* Makes all cards grow equally */
     max-width: 300px;
     background-color: white;
     padding: 40px;
     margin: 30px 15px;
     border-radius: 10px;
     box-shadow: 10px 10px 10px -1px rgba(0, 0, 0, 0.16), 3px 3px 10px -1px rgba(255, 255, 255, 0.7);
-    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease; 
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    animation: appear 0.75s forwards;  
+    transition: background-color 0.3s ease, transform 0.3s ease, box-shadow 0.3s ease;
 }
+
 
 /* inactive card */
 .wrapper .card h1 {
-    margin-bottom: 10px;
+    margin-bottom: 1px;
     color: rgba(0, 0, 0, 1);
 }
 
