Membuat Page Mentors List , Profile Member, Admin Manage Video (Get, Upload, Update, dan Delete). Membuat fitur search dan filter untuk Mentors List

--- a/ANGULAR/css/Footer.css
+++ b/ANGULAR/css/Footer.css
@@ -3,6 +3,7 @@ footer {
     text-align: center;
     padding: 2% 0% 2% 0%;
     background-color: #3c492d;
+    margin-top: 45vh;
   }
   
   footer h2 {
